--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Import Google Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <title>Singaporean politician face recognition</title>
+<title>Identify SG Politician</title>
 </head>
 
 <body>
@@ -27,17 +27,17 @@
             <div id="header-contianer" class="d-flex flex-column flex-md-row  justify-content-md-between">
                 <div id="header-container-l" class="d-flex flex-column col-md-8">
                     <div class="d-flex flex-row">
-                        <h4>Singaporean politician face recognition</h4><span class="ml-2 p-2 badge badge-pill"
+                        <h4>Identify SG Politician</h4><span class="ml-2 p-2 badge badge-pill"
                             style="background-color:#B71C1C; color:white; height: 28px;"><i>DEMO</i></span>
                     </div>
                     <div>
                         <p>
-                            This demo app will detect face of Singaporean politicians based on SG Parliament 2019.
+                            This demo app identifies Singaporean members of parliament of 2019 within a photo (with associated degree of confidence and additional info from Wikipedia).<br><br>Do note the 5MB image file size limit.
                         </p>
                     </div>
                 </div>
                 <div id="header-container-r" class="d-flex flex-row flex-md-column col-md-3 justify-content-around">
-                    <a href="https://platform.sentient.io/demoapps_detail#face_recognition" target="_blank" class="mb-1 mx-auto d-block text-center sentie-btn-secondary"
+                    <a href="https://platform.sentient.io/demoapps_detail#identify_politician" target="_blank" class="mb-1 mx-auto d-block text-center sentie-btn-secondary"
                         style="width: 200px;background: #f5f5f5;">
                         More Info
                     </a>
