--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
-	<link rel="icon" type="image/svg" href="img/Sentient-io_fav.svg"/>
+    <link rel="icon" type="image/svg" href="img/Sentient-io_fav.svg"/>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -117,7 +117,7 @@
                             Restart
                         </button>
                     </div>
-                    <!-- END FAction buttons -->
+                    <!-- END Action buttons -->
 
                 </div>
 
