button space and logo update

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                         </p>
                     </div>
                 </div>
-                <div id="header-container-r" class="d-flex flex-row flex-md-column col-md-3 justify-content-around">
-                    <a href="https://platform.sentient.io/demoapps_detail#identify_politician" target="_blank" class="mb-1 mx-auto d-block text-center sentie-btn-secondary"
+                <div id="header-container-r" class="d-flex flex-row flex-md-column col-md-3 justify-content-center">
+                    <a href="https://platform.sentient.io/demoapps_detail#identify_politician" target="_blank" class="mb-3 mx-auto d-block text-center sentie-btn-secondary"
                         style="width: 200px;background: #f5f5f5;">
                         More Info
                     </a>
-                    <a href="https://github.com/sentient-io/platform_demo-app_face-recognition" target="_blank" class="mb-1 mx-auto text-center sentie-btn-primary sentie-btn-grey"
+                    <a href="https://github.com/sentient-io/platform_demo-app_face-recognition" target="_blank" class="mb-3 mx-auto text-center sentie-btn-primary sentie-btn-grey"
                         style="width: 200px;">
                         Demo App Code
                     </a>
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-4">
-                <img src="img/sentient-logo.png" alt="Sentient.io logo" class="m-auto d-block">
+                <img src="img/sentient-logo.png" alt="Sentient.io logo" class="m-auto d-block" style="max-width: 280px;">
             </div>
         </div>
     </footer>
