--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
-    <link rel="icon" type="image/svg" href="img/Sentient-io_fav.svg"/>
+
+    <link rel="icon" type="image/svg" href="img/Sentient-io_fav.svg" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -18,12 +18,12 @@
     <!-- Import Google Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<title>Identify SG Politician</title>
+    <title>Identify SG Politician</title>
 </head>
 
 <body>
     <div class="bg-wave-pattern" style="min-height: calc(100vh - 100px);">
-        <div class="m-auto p-md-5 p-3" style="max-width:1000px">
+        <div class="m-auto p-md-5 p-3" style="max-width:1200px">
 
             <!-- Header Content, title and description -->
             <div id="header-contianer" class="d-flex flex-column flex-md-row  justify-content-md-between">
@@ -34,17 +34,20 @@
                     </div>
                     <div>
                         <p>
-                            This demo app identifies Singaporean members of parliament of 2019 within a photo (with associated degree of confidence and additional info from Wikipedia).<br><br>Do note the 5MB image file size limit.
+                            This demo app identifies Singaporean members of parliament of 2019 within a photo (with
+                            associated degree of confidence and additional info from Wikipedia).<br><br>Do note the 5MB
+                            image file size limit.
                         </p>
                     </div>
                 </div>
                 <div id="header-container-r" class="d-flex flex-row flex-md-column col-md-3 justify-content-center">
-                    <a href="https://platform.sentient.io/demoapps_detail#identify_politician" target="_blank" class="mb-3 mx-auto d-block text-center sentie-btn-secondary"
+                    <a href="https://platform.sentient.io/demoapps_detail#identify_politician" target="_blank"
+                        class="mb-3 mx-auto d-block text-center sentie-btn-secondary"
                         style="width: 200px;background: #f5f5f5;">
                         More Info
                     </a>
-                    <a href="https://github.com/sentient-io/platform_demo-app_face-recognition" target="_blank" class="mb-3 mx-auto text-center sentie-btn-primary sentie-btn-grey"
-                        style="width: 200px;">
+                    <a href="https://github.com/sentient-io/platform_demo-app_face-recognition" target="_blank"
+                        class="mb-3 mx-auto text-center sentie-btn-primary sentie-btn-grey" style="width: 200px;">
                         Demo App Code
                     </a>
                 </div>
@@ -71,9 +74,9 @@
 
             <!-- Main Demo App Function -->
             <div id="demo-app-container"
-                class="mt-5 d-flex flex-column align-items-center justify-content-center flex-md-row">
+                class="mt-5 d-flex flex-column align-items-center justify-content-center flex-lg-row">
 
-                <div id="picUploader" class="col-12 col-md-6">
+                <div id="picUploader" class="col-12 col-lg-7">
 
                     <!-- Single Pic Uploader -->
                     <!-- Pic Preview -->
@@ -102,12 +105,15 @@
                                 No result, please change to another picture.
                             </p>
                         </div>
-                        <div id="loadingText" style="display: none;">
-                            <div class="d-flex item-align-center">
-                                <img src="img/loading.gif" alt="" width="26" height="26" class="mr-3">
-                                <p class="m-none p-none">Processing, please wait ...</p>
-                            </div>
+                        
+                        <!-- Lodaer with changing text -->
+                        <div class="m-auto pt-5 text-center" id="loader" style="display: none;">
+                            <img src="img/loading.gif" class="mr-3" alt="" width="24px">
+                            <span>Processing ... </span>
+                            <p class="pt-2" id="loader-text"></p>
                         </div>
+                        <!-- -END- Lodaer with changing text -->
+
                         <button onclick="handleRecognizeFace()" id="btn-handleRecognizeFace" style="display: none;"
                             class="mb-1 mx-auto sentie-btn-primary sentie-btn-green">
                             Analyse Image
@@ -121,7 +127,7 @@
 
                 </div>
 
-                <div id="analyseResult" class="col-12 col-md-6" style="display:none !important">
+                <div id="analyseResult" class="col-12 col-md-8 col-lg-5" style="display:none !important">
                 </div>
             </div>
 
@@ -145,7 +151,8 @@
                 </div>
             </div>
             <div class="col-12 col-lg-4">
-                <img src="img/sentient-logo.png" alt="Sentient.io logo" class="m-auto d-block" style="max-width: 280px;">
+                <img src="img/sentient-logo.png" alt="Sentient.io logo" class="m-auto d-block"
+                    style="max-width: 280px;">
             </div>
         </div>
     </footer>
