--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 </head>
 
 <body>
-    <div class="bg-wave-pattern" style="min-height: calc(100vh - 100px);">
+    <div class="content">
+    <div class="bg-wave-pattern flex-fill">
         <div class="m-auto p-md-5 p-3" style="max-width:1200px">
 
             <!-- Header Content, title and description -->
@@ -41,7 +42,7 @@
                     </div>
                 </div>
                 <div id="header-container-r" class="d-flex flex-row flex-md-column col-md-3 justify-content-center">
-                    <a href="https://platform.sentient.io/demoapps_detail#identify_politician" target="_blank"
+                    <a href="https://platform.sentient.io/demoapps_detail/identify_politician" target="_blank"
                         class="mb-3 mx-auto d-block text-center sentie-btn-secondary"
                         style="width: 200px;background: #f5f5f5;">
                         More Info
@@ -136,11 +137,11 @@
 
     <!-- Footer -->
     <footer class="shadow-lg" style="background-color:white">
-        <div class="mx-auto pt-5 pb-3 d-flex flex-column justify-content-center flex-lg-row" style="max-width: 1000px;">
+        <div class="mx-auto pt-30 pb-3 d-flex flex-column justify-content-center flex-lg-row" style="max-width: 1000px;">
             <div class="col-12 col-lg-8">
                 <div class="text-center text-lg-left">
                     <p>
-                        Designed and built by Sentient.io with the help of our contributors.
+                        Designed and built by <a href="https://www.sentient.io/" target="_blank" style="color:#bb9968">Sentient.io</a> with the help of our contributors.
                     </p>
                     <p>
                         App version: 1.0.0 | Source code for app available
@@ -157,6 +158,7 @@
         </div>
     </footer>
     <!-- End footer -->
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery(Google) first, then Popper.js, then Bootstrap JS -->
